get rid of add-modules